name:                listbuilder
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/sgraf812/listbuilder#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           2019 Sebastian Graf
category:            List
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.ListBuilder
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgraf812/listbuilder
